--- a/style.css
+++ b/style.css
@@ -2,3 +2,7 @@
   background: #1c1a19 url('./img/Illustration-header2.png') no-repeat right ;
   background-size: 45% 95%;
 }
+
+.h-line {
+  border-bottom: 0.5px solid #857f7f;
+}
