Create Work Cards

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #headline {
-  background: #1c1a19 url('./img/Illustration-header2.png') no-repeat right ;
+  background: url('./img/Illustration-header2.png') no-repeat right ;
   background-size: 45% 95%;
 }
 
